--- a/client/index.html
+++ b/client/index.html
@@ -10,10 +10,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="presence-indicator">🙅‍♂️</div>
-  <h4>Chat With Me</h4>
+  <div id="presence-indicator">🔴 🙅‍♂️</div>
   <div class="row page-column">
-    <form id="chat" class="col s12">
+    <form id="chat" class="col s12 card">
       <div class="row">
         <div class="input-field col s3">
           <i class="material-icons prefix">account_circle</i>
@@ -26,7 +25,7 @@
           <label for="text">Message</label>
         </div>
       </div>
-      <div class="col s12 btn-box">
+      <div class="col card-action s6 offset-s6 btn-box">
         <button class="btn teal lighten-1 waves-effect waves-light" type="submit">Submit
           <i class="material-icons right">send</i>
         </button>
